# pyTableGen

./: .gitignore  CMakeLists.txt  build.sh  foo.cpp  gencov.sh  main_module.cpp  pyproject.toml  readme.md  setup.py
cmake/: llvm.cmake  pybind11.cmake
include/: BindImpl.h  BindInit.h  Record.h
lib/: BindType.cpp  Init.cpp  Record.cpp  RecordKeeper.cpp
pyTableGen/: CMakeLists.txt  GenLLVM.py  cov_show.sh  cov_test.sh  example.td  gencov.sh  pyproject.toml
pyTableGen/src/tablegen/: Context.py  RecordKeeper.py  SetTheory.py  Units.py  __init__.py  binding.pyi  context.py  dumper.py  utils.py
pyTableGen/src/tablegen/Core/: Record.py
pyTableGen/src/tablegen/RecTy/: bits.py  type.py
pyTableGen/src/tablegen/dsl/: bits.py  context.py  dumper.py  record.py  spec.md  value.py
pyTableGen/src/tablegen/legacy/: _Context.py
pyTableGen/src/tablegen/llvm/: RegisterClass.py  SetTheory.py
pyTableGen/src/tablegen/unit/: _base.py  bits.py  dag.py  operator.py  record.py  value.py
pyTableGen/src/tablegen/wrapper/: record.py  recordkeeper.py  wrapper.py
pyTableGen/tests/: test_dumper.py  test_dumper.td  test_llvm.py  test_llvm_dsl.py  test_llvm_pywra.py  test_pyclass.py  test_pywrapper.py
pyTableGen/tests/Binding/: test.td  test_binding.py  test_binding_RecTyp.py  test_binding_llvm.py  test_dumper.py  test_pywrapper.py
pyTableGen/tests/Context/: test_context.py
pyTableGen/tests/Dumper/: test_dumper.py  test_pyclass.py
pyTableGen/tests/Units/: test_Bits.py  test_Dag.py  test_Record.py  test_Value.py
pyTableGen/tests/Wrapper/: test_Bits.py  test_Dag.py  test_RecordKeeper.py  test_pywrapper.py
pyTableGen/tests/dsl/: test_dslbits.py  test_dslcontext.py  test_dslrecord.py
src/tablegen/Core/: Record.py
src/tablegen/Mixins/: MixinOpExtendable.py
tablegen-binding/: BindingAPIList.md  CMakeLists.txt  CMakePresets.json  LLVMSource.cpp  LLVMSource.cpp.in  main_module.cpp  pyproject.toml  setup.py
tablegen-binding/include/: BindImpl.h  BindInit.h  BindRecTy.h  BindRecord.h  BindType.h
tablegen-binding/lib/: BindType.cpp  Init.cpp  RecTy.cpp  Record.cpp  RecordKeeper.cpp
test/: A.td  test.py
tests/: A.td  test_define.py
tests/Binding/: A.td  test_binding.py
tests/Mixins/: test_MixinOpExtendable.py
